# StratomCurtain

./: .bashrc  .env  .gitignore  .gitmodules  Dockerfile  README.md  World3  frames_2023-06-06_20.41.39.gv
UntitledTest/: model.config  model.sdf
src/config_test/: package.xml  setup.cfg  setup.py
src/config_test/config_test/: ConfigTest.py
src/lidar_scan_to_pointcloud/: CMakeLists.txt  package.xml
src/lidar_scan_to_pointcloud/src/: LidarToPointcloud.cpp
src/odom_tf2_adapter/: package.xml  setup.cfg  setup.py
src/odom_tf2_adapter/odom_tf2_adapter/: OdomTf2Adapter.py
src/pclconvert/: package.xml  setup.cfg  setup.py
src/pclconvert/pclconvert/: convert.py
src/pointcloud_to_blob/: CMakeLists.txt  package.xml
src/pointcloud_to_blob/src/: PointcloudToBlob.cpp
src/polygon_array_msg/: CMakeLists.txt  package.xml
src/py_tracker/: package.xml  setup.cfg  setup.py
src/py_tracker/py_tracker/: MessageUtils.py  PyTracker.py  TrackedObject.py  Tracker.py  VizUtils.py  py_tracker.py
src/py_tracker_msg/: CMakeLists.txt  package.xml
src/py_tracker_msg/msg/: PyTrackerArrayMsg.msg  PyTrackerMsg.msg
src/py_tracker_msgs/: CMakeLists.txt  package.xml
src/py_tracker_msgs/msg/: PyTrackerArrayMsg.msg  PyTrackerMsg.msg
src/stratom_msgs/: CMakeLists.txt  package.xml
src/stratom_sim/: CMakeLists.txt  package.xml
src/stratom_sim/config/: default.yaml  rviz_config.rviz
src/stratom_sim/launch/: load_world_into_gazebo.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  stratom_curtain.launch.py  stratom_sim.launch.py  turtlebot_sim.launch.py
src/stratom_sim/models/turtlebot3_waffle/: model.sdf  model_old.sdf
src/stratom_sim/rviz/: default.rviz
src/stratom_sim/worlds/: World1  World2  World3  World4  factory  factory.world  world5
